--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "token": "STAGE=dev node -r dotenv/config -r @babel/register cli/token.js",
-    "postinstall": "npm run prestart:prod"
+    "token": "STAGE=dev node -r dotenv/config -r @babel/register cli/token.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
